WIP Portfolio Page

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
             <textarea type="text" id="Message" name="message" rows="14" cols="20" placeholder="Type your Message here...">
             </textarea>
             <br><br>
-            <button type="button" class="Submit"><a href="contact.html" class="Submit">Submit</a></button>
+            <button type="button" class="Submit"><a href="thankyou.html" class="Submit">Submit</a></button>
         </form>
     </article>
     </section>
