--- a/portfolio.html
+++ b/portfolio.html
@@ -26,37 +26,48 @@
 <br><br>
 
 <body>
-<br><br>
-<div class="PorfolioPage">
-    <h4 class="PorfolioMe">Portfolio</h4>
-    <br>
-    <div class="Hangman">
-        <img class="Hangman" src="assets/images/Hangman pic.jpg" alt="Hangman Pic">
-        <div class="Hangman2">Hangman</div> 
+<section class="PortfolioPage">
+    <h4 class="PortfolioPage">Portfolio</h4>
+    <article class="ThankYou2">
+        <br>
+    <div class="Row1">
+        <div class="Hangman">
+        <a href="blank.html"><img class="Hangman" src="assets/images/Hangman pic.jpg" alt="Hangman Pic"></a>
+        <br>
+        <div class="Hangman2"><a href="blank.html" class="Hangman2">Hangman</a></div> 
+        </div>
+        <br>
+        <div class="RPG">
+        <a href="blank.html"><img class="RPG" src="assets/images/RPG pic.jpg" alt="RPG Pic"></a>
+        <br>
+        <div class="RPG2"><a href="blank.html" class="RPG2">RPG</a></div>
+        </div>
     </div>
     <br>
-    <div class="RPG">
-        <img class="RPG" src="assets/images/RPG pic.jpg" alt="RPG Pic">
-        <div class="RPG2">RPG</div>
+    <div class="Row2">
+        <div class="Trivia">
+        <a href="blank.html"><img class="Trivia" src="assets/images/Trivia.jpg" alt="Trivia Pic"></a>
+        <br>
+        <div class="Trivia2"><a href="blank.html" class="Trivia2">Trivia Game</a></div>
+        </div>
+        <br>
+        <div class="Rutgers">
+        <a href="blank.html"><img class="Rutgers" src="assets/images/Rutgers pic.jpg" alt="Rutgers Pic"></a>
+        <br>
+        <div class="Rutgers2"><a href="blank.html" class="Rutgers2">Rutgers Info Widget</a></div>
+        </div>
     </div>
     <br>
-    <div class="Trivia">
-        <img class="Trivia" src="assets/images/Trivia.jpg" alt="Trivia Pic">
-        <div class="Trivia2">Trivia Game</div>
+    <div class="Row3">
+        <div class="RockPaperScissors">
+        <a href="blank.html"><img class="RockPaperScissors" src="assets/images/rock-paper-scissors pic.png" alt="Rock Paper Scissors Pic"></a>
+        <br>
+        <div class="RockPaperScissors2"><a href="blank.html" class="RockPaperScissors2">Rock Paper Scissors</a></div>
+        </div>
     </div>
-    <br>
-    <div class="Rutgers">
-        <img class="Rutgers" src="assets/images/Rutgers pic.jpg" alt="Rutgers Pic">
-        <div class="Rutgers2">Rutgers Info Widget</div>
-    </div>
-    <br>
-    <div class="RockPaperScissors">
-        <img class="RockPaperScissors" src="assets/images/rock-paper-scissors pic.png" alt="Rock Paper Scissors">
-        <div class="RockPaperScissors2">Rock Paper Scissors</div>
-    </div>
+    </article>
+</section>
 
-</div>
-    
 </body>
 <br><br><br><br>
 <footer>
