ok but Needs Refinement

--- a/contact.html
+++ b/contact.html
@@ -45,9 +45,9 @@
     <section class="right">
         <h5 class="ConnectWithMe">Connect With Me</h5>
     <article class="ConnectWithMeLinks">
-        <a href="https://github.com/JecoLantern"><img class="GitHubIcon" src="assets/images/github icon.png" alt="GitHub icon"></a>
-        <a href="https://www.linkedin.com/in/jeric-ayonke-93536443/"><img class="LinkedInIcon" src="assets/images/linkedin icon.png" alt="LinkedIn icon"></a>
-        <a href="https://stackoverflow.com/users/10034638/jecolantern"><img class="OverflowIcon" src="assets/images/overflow icon.png" alt="Overflow icon"></a>
+        <a href="https://github.com/JecoLantern" target="new_blank"><img class="GitHubIcon" src="assets/images/github icon.png" alt="GitHub icon"></a>
+        <a href="https://www.linkedin.com/in/jeric-ayonke-93536443/" target="_blank"><img class="LinkedInIcon" src="assets/images/linkedin icon.png" alt="LinkedIn icon"></a>
+        <a href="https://stackoverflow.com/users/10034638/jecolantern" target="_blank"><img class="OverflowIcon" src="assets/images/overflow icon.png" alt="Overflow icon"></a>
     </article>
     </section>
     
