--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
 <body>
 <section class="PortfolioPage">
     <h4 class="PortfolioPage">Portfolio</h4>
-    <article class="ThankYou2">
+    <article class="PortfolioPage2">
         <br>
     <div class="Row1">
         <div class="Hangman">
@@ -67,9 +67,8 @@
     </div>
     </article>
 </section>
-
 </body>
-<br><br><br><br>
+<br>
 <footer>
     Copyright c2018
 </footer>
